# agent-sleepy

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  HUMAN-TODO.md  LICENSE  MARKETING.md  README.md  ROADMAP.md  SETUP.md  SPRINT.md  firstprompt.md  pyproject.toml
scripts/: inspect_garmin.py  run_ingest.sh
src/sleepy/: config.py
src/sleepy/coach/: food_parser.py  location_parser.py
src/sleepy/ingest/: garmin.py
src/sleepy/jobs/: nightly_ingest.py  telegram_bot.py
src/sleepy/models/: food.py  location.py  sleep.py  workout.py
src/sleepy/store/: food.py  location.py  sleep.py  workout.py
tests/: test_coach_food_parser.py  test_models_food.py
tests/fixtures/: garmin_activity.json
tests/models/: test_workout.py
tests/store/: test_location.py  test_workout.py
