[project]
name = "agent-sleepy"
version = "0.1.0"
description = "Proactive personal sleep-improvement agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.101.0",
    "garminconnect>=0.3.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleepy"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
